--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,3 @@
-.blue-body {
-  background-color: #C3EEFA;
-}
-
-.purple-body {
-  background-color: #E9CFFE;
-}
-
-.blue-title {
-  color: #4480bc;
-  border-bottom: 1px solid #4480bc;
-}
-
-.purple-title {
-  color: #8553b8;
-  border-bottom: 1px solid #8553b8;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-a:hover {
-  color: rgba(0, 0, 0, 0.4);
-  opacity: 0.6;
-}
-
-.btn:hover {
-  opacity: 0.6;
-}
-
-.container-fluid {
-  max-width: 1200px;
-}
-
 #page-container {
   position: relative;
   min-height: 100vh;
@@ -43,47 +7,39 @@ a:hover {
   padding-bottom: 2.5rem;
 }
 
-.btn-settings {
-  max-height: 50px;
+.container-fluid {
+  max-width: 1200px;
 }
 
-.modal {
-  display: block;
-  position: fixed;
-  z-index: 3;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
+.purple-body {
+  background-color: #E9CFFE;
+  transition: 0.5s;
 }
 
-.modal-box {
-  border: 1px solid #888;
-  border-radius: 25px;
-  margin: 15% auto;
-  padding: 20px;
-  width: 60%;
-  max-width: 700px;
-}
-
-@media (max-width: 767px) {
-  .modal-box {
-    width: 80%
-  }
-}
-
-#blue-active-hour h4,
-#purple-active-hour h4 {
-  color: white;
-}
-
-#blue-active-hour td {
+.blue-body {
   background-color: #C3EEFA;
+  transition: 0.5s;
 }
 
-#purple-active-hour td {
-  background-color: #E9CBFF;
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover, 
+button:hover {
+  opacity: 0.6;
+}
+
+.btn-circular {
+  background-color: transparent;
+  border: 2px solid;
+  border-radius: 100px;
+  transition: 3s;
+}
+
+.btn-circular:active {
+  color: white;
+  border: 5px solid black;
+  transition: 0.1s;
 }
