--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -23,3 +23,19 @@
 .navbar h4 {
   color: white;
 }
+
+#footer {
+  position: absolute;
+  z-index: 1;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+}
+
+footer {
+  font-size: 20px;
+}
+
+footer small {
+  font-size: 15px;
+}
