--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,22 @@
-#page-container {
-  position: relative;
-  min-height: 100vh;
+.purple-layout {
+  background-color: #B195D2;
+  transition: 1s;
 }
 
-#content-wrap {
-  padding-bottom: 2.5rem;
-}
-
-.container-fluid {
-  max-width: 1200px;
-}
-
-.purple-body {
-  background-color: #E9CFFE;
-  transition: 0.5s;
-}
-
-.blue-body {
-  background-color: #C3EEFA;
-  transition: 0.5s;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-a:hover, 
-button:hover {
-  opacity: 0.6;
+.blue-layout {
+  background-color: #A7C7E7;
+  transition: 1s;
 }
 
 .btn-circular {
   background-color: transparent;
   border: 2px solid;
   border-radius: 100px;
-  transition: 3s;
+  color: inherit;
+  transition: 0.5s;
 }
 
 .btn-circular:active {
-  color: white;
   border: 5px solid black;
   transition: 0.1s;
 }
