--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -5,3 +5,11 @@ main {
 .slide {
   transition: 0.1s ease-in-out;
 }
+
+.btn-sb {
+  margin-bottom: 8.3vh;
+}
+
+.slide-down {
+  height: 1500px;
+}
