--- a/src/components/PatientButton/PatientButton.css
+++ b/src/components/PatientButton/PatientButton.css
@@ -1,24 +1,50 @@
-.btn-sb-active {
+.btn-holder {
+  margin-left: 10%;
+  width: 90%;
+  min-height: 55px;
+  border-radius: 100px 0px 0px 100px;
   background-color: white;
-  border-radius: 25px 0 0 25px;
- 
 }
 
-.btn-sb {
-  text-align: center;
+.blue-top, .purple-top, .blue-bottom, .purple-bottom {
+  width: 100%;
+  height: 5px;
 }
 
-.btn-pt, .btn-pt-active {
-  height: 50px;
+.blue-top, .purple-top {
+  border-radius: 0 0 30px 10px;
+}
+
+.blue-bottom, .purple-bottom {
+  border-radius: 10px 30px 0 0;
+}
+
+.blue-top, .blue-bottom {
+  background-color: #87bdf3 ;
+}
+
+.purple-top, .purple-bottom {
+  background-color: #B195D2;
+}
+
+.btn-pt, .btn-pt-blue-active, .btn-pt-purple-active {
   width: 50px;
+  height: 50px;
 }
 
 .btn-pt {
   background-color: white !important;
 }
 
-.btn-blue {
-  background-color: #87bdf3;
+.btn-pt-blue-active, .btn-pt-purple-active {
   border: 2px solid black !important;
   color: white !important;
+}
+
+.btn-pt-blue-active {
+  background-color: #87bdf3 !important;
+}
+
+.btn-pt-purple-active {
+  background-color: #B195D2 !important;
 }
