--- a/src/components/Modals/Modals.css
+++ b/src/components/Modals/Modals.css
@@ -60,7 +60,7 @@
   border-bottom: 1px solid #8553b8;
 }
 
-#btn-exit-modal {
+#btn-exit-modal, #btn-delete-tasks {
   border-color: #DC3545;
   height: 25px;
   width: 25px;
@@ -68,7 +68,7 @@
   color: #DC3545;
 }
 
-#btn-exit-modal:active {
+#btn-exit-modal:active, #btn-delete-tasks:active {
   background-color: #DC3545;
   color: white;
   border: 2px solid black;
@@ -127,4 +127,60 @@
 
 .purple-body {
   background-color: #E9CFFE;
+}
+
+.blue-divider, .purple-divider {
+  border-top: 2px solid;
+  padding-top: 5px;
+  margin-top: 10px;
+}
+
+.blue-divider:first-child, .purple-divider:first-child {
+  border-color: transparent;
+}
+
+.blue-divider {
+  border-color: #4480bc;
+}
+
+.purple-divider {
+  border-color: #8553b8;
+}
+
+.blue-divider:first-of-type, .purple-divider:first-of-type {
+  border-color: transparent !important;
+}
+
+.crossed-task {
+  text-decoration: line-through;
+}
+
+.task-icon {
+  font-size: 25px;
+}
+
+.btn-remove-task {
+  background-color: transparent;
+  color: #DC3545;
+  border-color: #DC3545
+}
+
+.btn-past-tasks {
+  max-height: 200px !important;
+}
+
+.icon-hour:active {
+  color: white;
+}
+
+.btn-hour {
+  border-color: transparent;
+}
+
+.hour-bar:first-child {
+  margin-bottom: 1%;
+}
+
+.hour-bar:last-child {
+  margin-top: 7%;
 }
