--- a/src/components/PatientButton/PatientButton.css
+++ b/src/components/PatientButton/PatientButton.css
@@ -4,7 +4,18 @@
   min-height: 55px;
   border-radius: 100px 0px 0px 100px;
   background-color: white;
+  animation-name: slide-left;
+  animation-duration: 0.5s;
 }
+
+@keyframes slide-left {
+  from {
+    margin-right: -15px;
+    margin-left: 15px;
+  }
+}
+
+
 
 .blue-top, .purple-top, .blue-bottom, .purple-bottom {
   width: 100%;
