--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,19 @@
-
-.App {
-  text-align: center;
+.purple-primary {
+  background-color: #B195D2;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.blue-primary {
+  background-color: #87bdf3;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn-circular {
+  background-color: transparent;
+  border: 2px solid;
+  border-radius: 100px;
+  color: inherit;
+  transition: 0.5s;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.warning-text {
+  color: #DC3545;
 }
