--- a/src/components/PatientButtons/PatientButtons.css
+++ b/src/components/PatientButtons/PatientButtons.css
@@ -7,6 +7,14 @@
   animation-duration: 0.5s;
 }
 
+.btn-holder, .btn-sb {
+  margin-bottom: 68px;
+}
+
+.btn-holder:first-child, .btn-sb:first-child {
+  margin-bottom: 12px;
+}
+
 .blue-top, .purple-top, .blue-bottom, .purple-bottom {
   width: 100%;
   height: 5px;
