--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -13,7 +13,7 @@
   transition-delay: 0.5s;
 }
 
-/*Navbar Button*/
+/*Navbar button style*/
 #btn-navbar {
   border-color: #6f6f6f;
   color: #6f6f6f;
