--- a/src/components/PatientList/PatientList.css
+++ b/src/components/PatientList/PatientList.css
@@ -14,6 +14,7 @@
 .btn-pt-room,
 .btn-pt-tasks,
 .btn-add-task {
+  text-decoration: none;
   border: 1px solid black;
   height: 100%;
   width: 100%;
